--- a/GameServer/GameServer.csproj
+++ b/GameServer/GameServer.csproj
@@ -41,8 +41,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Game.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Slot.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
