--- a/StateMachine/StateMachine.csproj
+++ b/StateMachine/StateMachine.csproj
@@ -42,6 +42,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BaseState.cs" />
+    <Compile Include="BaseTrigger.cs" />
     <Compile Include="StateMachine.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
