Renamed BaseTrigger to Trigger

--- a/StateMachine/StateMachine.csproj
+++ b/StateMachine/StateMachine.csproj
@@ -43,7 +43,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BaseState.cs" />
-    <Compile Include="BaseTrigger.cs" />
+    <Compile Include="Trigger.cs" />
     <Compile Include="StateMachine.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
