Added (de)serialization of paytables
The paytable should really be generated by a math tool and the xml read
into the GDK. For now it can be generated by hardcoding the data.

--- a/MathEngine/MathEngine.csproj
+++ b/MathEngine/MathEngine.csproj
@@ -41,6 +41,8 @@
   <ItemGroup>
     <Compile Include="PayCombo.cs" />
     <Compile Include="Paylines.cs" />
+    <Compile Include="Paytable.cs" />
+    <Compile Include="PaytableGenerator.cs" />
     <Compile Include="Reel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ReelGroup.cs" />
