--- a/GameServer/GameServer.csproj
+++ b/GameServer/GameServer.csproj
@@ -55,6 +55,10 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\MathEngine\MathEngine.csproj">
+      <Project>{66704790-2894-4021-8f21-c57947418e4c}</Project>
+      <Name>MathEngine</Name>
+    </ProjectReference>
     <ProjectReference Include="..\StateMachine\StateMachine.csproj">
       <Project>{aeecfbbd-8814-4704-ab66-9606992c7a67}</Project>
       <Name>StateMachine</Name>
