--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
+  <repository path="..\GameLibrary\packages.config" />
   <repository path="..\GameServer\packages.config" />
+  <repository path="..\SlotLibrary\packages.config" />
   <repository path="..\StateMachine\packages.config" />
 </repositories>
