--- a/GameLibrary/GameLibrary.csproj
+++ b/GameLibrary/GameLibrary.csproj
@@ -44,6 +44,9 @@
   <ItemGroup>
     <Compile Include="Game.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="StateGameOver.cs" />
+    <Compile Include="StateIdle.cs" />
+    <Compile Include="StatePlay.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\StateMachine\StateMachine.csproj">
