--- a/SlotLibrary/SlotLibrary.csproj
+++ b/SlotLibrary/SlotLibrary.csproj
@@ -44,6 +44,8 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Slot.cs" />
+    <Compile Include="StateBeginPlay.cs" />
+    <Compile Include="StateEvaluate.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\GameLibrary\GameLibrary.csproj">
