--- a/MathEngine/MathEngine.csproj
+++ b/MathEngine/MathEngine.csproj
@@ -47,6 +47,7 @@
     <Compile Include="Reel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ReelGroup.cs" />
+    <Compile Include="SlotResult.cs" />
     <Compile Include="Symbol.cs" />
   </ItemGroup>
   <ItemGroup>
